fix font sizing on mobile and text overflow issues in list

--- a/src/css/app.scss
+++ b/src/css/app.scss
@@ -186,11 +186,11 @@ body {
   height: 8rem;
 }
 
-.list-text  {
+.list-text {
   text-align: right;
 }
 
-.list-group-item img  {
+.list-group-item img {
   border-radius: 0.375rem;
   width: 6rem;
   height: 8rem;
@@ -246,6 +246,37 @@ body {
   outline: none;
 }
 
+@media only screen and (max-width: 800px) {
+  .card-title {
+    font-size: smaller;
+  }
+
+  .card-subtitle {
+    font-size: xx-small;
+  }
+
+    .header-text {
+    font-size: 20px;
+    line-height: 24px;
+    font-weight: 400;
+  }
+
+  .page-title {
+    font-size: 28px;
+  }
+
+    .list-group-item-heading {
+    font-size: 1rem;
+    max-height: 3rem;
+    text-overflow: ellipsis;
+    overflow: hidden;
+  }
+
+  .list-group-item-text {
+    font-size: 0.8rem;
+  }
+}
+
 @media only screen and (max-width: 1000px) {
   .search-input {
     width: 80%;
@@ -272,13 +303,5 @@ body {
 
   .card-img-top {
     max-height: 32rem;
-  }
-
-  .list-group-item-heading  {
-    font-size: 1rem;
-  }
-
-  .list-group-item-text {
-    font-size: 0.8rem;
   }
 }
